--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
-    "express": "^4.17.3",
-    "mocha": "^9.2.1",
-    "chai": "^4.3.6"
+    "express": "^4.17.3"
   },
   "devDependencies": {
+    "mocha": "^9.2.1",
+    "chai": "^4.3.6",
     "nodemon": "^2.0.15"
   }
 }
